<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="del">clear</string>
    <string name="procent">%</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cancel">del</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="pi">π</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="power">^</string>
    <string name="tan">tan</string>
    <string name="exp">e</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="root">√</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
</resources>
